test/test_examples/syntactic_examples/syntax_error/error_statement_40.zig
// Syntax error: missing separator in function call

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = ifj.write("hello" "world" , "!");
}